tests/NormalTests/paczka1/fuzzy1/62894416.err
Error in line 1: S286 A770 63,0
Error in line 17: z8Ta2M A770 69,8
Error in line 27: Di9SNogMU A675 20,9
Error in line 35: z8Ta2M S93 37,2
Error in line 29: 7PFN A675 1,2
